--- a/Freshman/cs/컴퓨터구조.md
+++ b/Freshman/cs/컴퓨터구조.md
@@ -91,3 +91,111 @@
 ### 7. 그래픽 프로세서 (Graphic Process Unit)
     - CPU 부담을 줄이기 위해, 그래픽 데이터 등을 전문적으로 처리하는 보조 프로세서
     - 대량 병렬 프로세서, 여러 스레드를 병렬로 실행 가능
+
+<br/><br/><br/>
+
+### 1. 기억장치 ( 메모리 )
+    - 전자적 수단에 의해 기억 및 기록 능력을 실현시키는 장치
+    - 2진 정보의 읽기/쓰기/검색이 가능한 다수의 메모리 셀로 구성된 디지털시스템
+
+        1. 캐쉬 메모리 (Cache Memory)
+            - CPU와 주 기억장치 등 간에 속도 최적화, 임시 기억 등을 위한 고속의 메모리
+        2. 주기억장치
+            - 주로 반도체 메모리 소자를 말함(RAM, ROM)
+        3. 보조 기억장치 (Auxiliary Memory), 대용량 메모리(Mass Memory), 외부 기억장치(External Memory)
+            - 대용량 정보를 저장하기 위한 자기 디스크, 플래시 메모리, 광디스크 등과 같은 저장장치
+        4. 가상 메모리(Virtual Memory)
+            -  부족한 주기억장치를 보조기억장치로 확장
+
+        > 메모리 관리
+            CPU -> Cache Memory -> 주메모리 -> 보조메모리
+            -->방향일수록 느려지고, 저가, 큰용량, 큰 에너지 소비
+            1. 캐시 (Cache)
+                - CPU와 주기억장치 사이에 존재하는 버퍼 형태의 고속의 기억장치
+                - CPU에서 메모리로부터 레지스터로 데이터를 읽어들일 때, 캐시라인이란 단위의 데이터를 읽고 해당 데이터를 레지스터로 옮김
+                - CPU와 주기억장치 사이의 속도의 차이를 완화시킴
+
+            >   캐싱 알고리즘 종류
+                1. LFU (Least Frequently Used) - 캐시 내 가장 덜 찾는 항목 먼저 삭제
+                2. LRU (Least Recently Used) - 캐시 내 가장 오래된 항목 먼저 삭제
+            
+            >   캐시 메모리 종류
+                1. L1 cache(Primary cache) - 프로세서 core에 내장된 cache 메모리
+                2. 프로세서 안에 내장된 것이 아니라 메인보드나 카트리지에게 장착
+        5. 연관 기억장치 (Content Addressable Memory)
+            - 정보가 저장되어 있는 주소에 의해 그 내용에 접근함
+            - 주소를 사용하는 것이 아닌 계산한 결과로부터 주소를 만들어 저장되어 있는 기억 장치로 접근함
+        
+        6. 메모리 관리 장치(Memory Management Unit)
+            - 가상 메모리 시스템을 관리하는 하드웨어 요소
+            - 가상 주소를 실제 물리 주소로 변환
+            - 캐시 메모리 관리
+            - 버스 중재
+
+        7. 런타임 메모리 
+            - 메모리 내 데이터를 일시적으로 기억해두는 영역
+            런타임 메모리 or 프로세스 메모리의 할당영역 구분
+            1. 정적 영역
+                - 영구 메모리 (Permanent)
+                    . 텍스트 영역
+                    . 데이터 영역 (전역 변수, 정적 변수)
+            2. 동적 영역
+                - 스택 메모리 (Stack Memory)
+                    . 지역 변수, 함수 호출, 함수 매개 변수
+                    . 주소 공간 상 높은 주소(bottom)에서 낮은 주소(top)로 할당 됨
+                - 힙 메모리 (Heap Memory)
+                    . 주소 공간 상에서, 위쪽으로 확장됨
+                    . 어플리케이션이 운영체제로부터 미리 할당 받는 메모리 영역
+
+        8. RAM (Random Access Memory)
+            - 순차접근방식이 아닌 컴퓨터 주기억장치
+            - 컴퓨터 전원이 꺼지면 내용이 사라지는 휘발성 메모리 ( ROM 은 사라지지 않음 )
+            종류 
+                1. DRAM ( Dynamic RAM ) - 가격저렴, 회로 간단, 속도가 느림
+                2. SRAM ( Static RAM ) - 고가, 회로복잡, 속도가 빠름(L2캐시에 사용)
+                3. NVRAM (Non-volatile RAM) - 비휘발성 SRAM
+                     - SIMM RAM
+                        . 단면 커넥터 방식
+                    - DIMM RAM (dual in-line memory module) (★)
+                        . 양면 커넥터 방식 (64 비트 이상 PC 메모리는 모두 DIMM 방식)
+                        . 칩 전면,후면 핀 수는 같으나, 그 기능은 달리함
+
+        9. ROM (Read Only Memory)
+            - DRAM과는 달리 일단 기억된 내용은 전원의 공급이 없어도 계속 기억하는 메모리
+            종류
+                1. Mask ROM : 수정 불가능, 많은 양의 동일한 형태가 필요한 경우
+                2. PROM : 다시 수정 가능
+                    - EPROM ( Electrically Programmable Read Only Memory) - PROM의 변형, IC위쪽에 특별한 창을 통해 자외선을 비추어 사용
+                    - EEPROM (E제곱 PROM) - 회로 기판 상에 붙혀진 상태에서 내용의 일부분을 전기적으로 재수정 가능
+                    - FLASH EEPROM (FLASH MEMORY) - 내용 전체를 지우거나 재수정함
+        
+### 2. 버스
+    1. 버스(Bus)
+        - 데이터 교환을 위한 신호선들의 묶음
+        버스 종류
+        1. 통신 선 가닥수에 따른 구분 : 병렬, 직렬 버스
+        2. 공통 클럭 여부에 따른 구분 : 동기식 버스, 비동기식 버스
+        3. 컴퓨터 내 버스
+            - 구조 상의 위치에 따른 구분 : 시스템 버스, I/O 버스
+            - 전달 정보에 따른 구분 : 데이터 버스, 주소 버스, 제어 버스
+    2. 버스 통신 (Bus Communication)
+        - 공유된 신호선들을 사용
+        - 다수 노드 간에 데이터 송수신이 가능
+        - 다양한 연결 방식의 네트워킹이 가능
+        - 통상, 표준화된 프로토콜이 사용됨
+    
+    3. 컴퓨터 버스 
+        - 컴퓨터 메인보드 내 프로세서, 메모리, 주변장치들을 서로 연결하여, 시스템이 원활하게 가동되도록, 데이터 전송 역할을 하는 공통의 통로
+        - 통상, 범용의 컴퓨터 시스템은 1 이상의 CPU와 공유 메모리 사이에서 공통 버스를 통해 연결된 여러 장치 컨트롤러들로 구성됨
+        종류 
+        1. 내부 버스- CPU 내 레지스터 간을 연결
+        2. 외부 버스 - 구조상 구분(시스템버스, I/O버스) 신호상 구분 (데이터,주소,제어버스)
+
+    4. 시스템 버스 (데이터버스(양방향), 주소버스(단방향), 제어버스)
+        - CPU와 North Bridge 칩셋 간의 데이터 통로
+    5. 메모리 버스
+        - 노스브리지 메모리 슬롯 사이를 연결하는 통로 역할
+    7. I/O 버스 - PCI 버스(CPU 보드와 외부 입출력 장치 간의 데이터 전달용 버스)
+    8. 그래픽 버스 - AGP 버스 
+    9. 칩셋 버스 - 노스브리지(CPU, RAM, BIOS, GPU, 사우스 브리지)
+    
